--- a/_includes/setup.html
+++ b/_includes/setup.html
@@ -11,9 +11,10 @@
       which is not famous for being intuitive.
       if you accidentally find yourself stuck in it,
       try typing the escape key,
-      followed by ':q!' (colon, lower-case 'q', exclamation mark),
+      followed by ':wq!' (colon, lower-case 'q', exclamation mark),
       then hitting Return
-      to return to the shell. (This will lose any unsaved changes to the file.)
+      to return to the shell. (This will exit Vim <b> and</b> save the changes you made in the file.)
+
     </p>
     <h4>The Bash Shell</h4>
     <p>
@@ -37,6 +38,15 @@
       We use a simple database manager called <a href="http://www.sqlite.org/">SQLite</a>,
       either directly or through a browser plugin.
     </p>
+
+    <p>
+      <h4>Spreadsheet</h4>
+      We'll be using a spreadsheet program. If you already have a spreadsheet program
+installed, like LibreOffice, Excel or OpenOffice, you can use whatever you already have. 
+If you don't have a spreadsheet program, please 
+<a href="http://www.libreoffice.org/download/libreoffice-fresh/">download<a/> 
+and install LibreOffice.
+
   </div>
 </div>
 
@@ -50,8 +60,9 @@
       popular free code editor for Windows.
       Be aware that you must add its installation directory to your system path
       in order to launch it from the command line
-      (or have other tools like Git launch it for you).
-      Please ask your instructor to help you do this.
+
+      (or have other tools like Git launch it for you). The instructions to modify your path are available <a href="http://goo.gl/ANGRGR">online here</a>. Please ask your instructor to help you do this.
+
     </p>
     <h4>Git Bash</h4>
     <p>
@@ -70,8 +81,10 @@
         Double click on the file to run it.
       </li>
       <li>
-        Accept all defaults.
+        A command window will open and then close again. The installer downloads and installs a couple of command line programs that we'll need for course. 
       </li>
+      <li>If you saw it open and then close again, you're set!</li>
+
     </ul>
   </div>
   <div class="span6">
@@ -107,7 +120,8 @@
       We recommend
       <a href="http://www.barebones.com/products/textwrangler/">Text Wrangler</a> or
       <a href="http://www.sublimetext.com/">Sublime Text</a>.
-      In a pinch, you can use <code>nano</code>,
+      Alternatively, you can use <code>nano</code>,
+
       which should be pre-installed.
     </p>
   </div>
@@ -142,9 +156,13 @@
     <h4>Editor</h4>
     <p>
       <a href="http://kate-editor.org/">Kate</a> is one option for Linux users.
-      In a pinch, you can use <code>nano</code>,
+
+      Alternatively, you can use <code>nano</code>,
       which should be pre-installed.
     </p>
+  </div>
+  <div class="span6">
+
     <h4>R</h4>
     <p>
       You can download the binary files for your distribution
@@ -165,16 +183,22 @@
   </div>
 </div>
 
+
 <h3>Miscellaneous</h3>
+
+<h3>Extras - everyone needs to install these</h3>
+
 
 <div class="row-fluid">
   <div class="span6">
     <h4 id="firefox-sqlite">Firefox SQLite Plugin</h4>
     <p>
       Instead of using <code>sqlite3</code> from the command line,
-      you may use <a href="https://addons.mozilla.org/en-US/firefox/addon/sqlite-manager/">this plugin</a>
-      for Firefox instead.
-      To install it:
+
+      you will use <a href="https://addons.mozilla.org/en-US/firefox/addon/sqlite-manager/">this plugin</a>
+      for Firefox instead. If you don't already have firefox, <a href="https://getfirefox.com">install</a> it first.
+      To install the sqlite plugin:
+
     </p>
     <ul>
       <li>
@@ -193,8 +217,13 @@
 	Restart Firefox when prompted.
       </li>
       <li>
-	Select "SQLite Manager" from the "Tools" menu.
+
+	To check that it was installed correctly, select "SQLite Manager" from the "Tools" menu.
+
       </li>
     </ul>
   </div>
+
+
+</div>
 
