hr->br tag in organiser's info.

--- a/_layouts/bootcamp.html
+++ b/_layouts/bootcamp.html
@@ -24,7 +24,7 @@
             <div class="span10">
 	      <h2>A Data Carpentry Workshop</h2>
 
-	      <h4>Organized by ELIXIR Slovenia<hr>Faculty of Medicine, University of Ljubljana and National Institute of Biology.</h4>
+	      <h4>Organized by ELIXIR Slovenia<br>Faculty of Medicine, University of Ljubljana and National Institute of Biology.</h4>
 
               <h2>{{page.venue}}</h2>
               {% if page.address %}{{page.address}}<br/>{% endif %}
